# cpp

./: .gitignore  copy_elision.cpp  encoding.cpp  pointer_test.c  test
TearClass/: TearClass.sln  TearClass.vcxproj  TearClass.vcxproj.filters  tearClass.cpp
dllDemo/: CMakeLists.txt
dllDemo/include/: exportvec.h  staticlib.h
dllDemo/src/: dlltestnew.cpp  exetestnew.cpp  exportvec.cpp  staticlib.cpp  usevec.cpp
driverloader/: driver_loader.c  driver_loader.h  driver_operation.c  driverloader.sln  driverloader.vcxproj  driverloader.vcxproj.filters
excel_operation/: CMakeLists.txt
excel_operation/GCC-QT5.9/: .ninja_deps  .ninja_log  build-Debug.ninja  build-RelWithDebInfo.ninja  build-Release.ninja  build.ninja
excel_operation/GCC-QT5.9/.cmake/api/v1/reply/: cache-v2-37475ac9d42a14c5fea1.json  cmakeFiles-v1-465d69a2f0f92f708727.json  codemodel-v2-350479956ea45e42a9d0.json  index-2024-09-02T02-24-36-0702.json  target-test_xlsreader-Debug-fc50ecee61648b5b9fcf.json  target-test_xlsreader-RelWithDebInfo-281460534caccae8bdd5.json  target-test_xlsreader-Release-cedbefde4cdc2b707700.json  target-watch_process-Debug-0cf4bd4a264cc547c3e3.json  target-watch_process-RelWithDebInfo-2fe017d4796bd1ea1c19.json  target-watch_process-Release-9619f2f99d1a8133b0a3.json  toolchains-v1-a309443171d591442bc9.json
excel_operation/include/: replex.h  xls.h
excel_operation/include/libxls/: ole.h  xlsstruct.h  xlstool.h
excel_operation/src/: XlsReader.cpp  convert.cpp  convert.h  main.cpp  watch_process.cpp  xlsreader_module.h
grpc_test/: CMakeLists.txt
grpc_test/generate/: helloworld.grpc.pb.cc  helloworld.grpc.pb.h  helloworld.pb.cc  helloworld.pb.h
grpc_test/include/: simple_thread_pool.h
grpc_test/protos/: helloworld.proto
grpc_test/src/: greeter_async_client.cpp  greeter_async_client2.cpp  greeter_async_server.cpp  greeter_client.cpp  greeter_server.cpp  grpc_test.cpp
imguidemo/: CMakeLists.txt
imguidemo/include/: font_cache.h  load_image.h
imguidemo/src/: font_cache.cpp  imgui_demo.cpp  load_image.cpp  main.cpp  simple_demo.cpp  simple_demo_gui.cpp  simple_demo_gui.h  win32_dx12.cpp
learn_socket/: CMakeLists.txt
learn_socket/include/: hex_util.h
learn_socket/src/: hex_util.cpp  main.cpp
pimpl/: CMakeLists.txt
pimpl/include/: my_class.h
pimpl/src/: my_class.cpp
process/: CMakeLists.txt
process/include/: Memory.hpp
process/linux/: change_pid_memory.cpp  hook_sys.c  test_loop.cpp
process/src/: Memory.cpp
processProc/: Device.c  Device.h  Driver.c  Driver.h  Public.h  Queue.c  Queue.h  ReadMe.txt  Trace.h  processProc.inf  processProc.sln  processProc.vcxproj  processProc.vcxproj.filters
sciter-demo/: CMakeLists.txt
sciter-demo/src/: main.cpp  resources.cpp  sciter-win-main.cpp
sciter-demo/ui/: hello.css  hello.htm  hello.js  main.htm
signexe/: CMakeLists.txt
smart_pointer/: CMakeLists.txt
smart_pointer/include/: binary_tree.h  shared_from_this.h
smart_pointer/src/: binary_tree.cpp
testConventionCall/: testConventionCall.cpp  testConventionCall.sln  testConventionCall.vcxproj  testConventionCall.vcxproj.filters
testModule/: CMakeLists.txt  CMakePresets.json
testModule/src/: helloworld.ixx  test_module.cpp
testVcpkg/: CMakeLists.txt
testVcpkg/src/: main.cpp
testdll/: CMakeLists.txt
testdll/mingw11.2-x86_64/: .ninja_deps  .ninja_log  build.ninja
testdll/mingw11.2-x86_64/.cmake/api/v1/reply/: cache-v2-a11e4d9dda12b1c6d078.json  cmakeFiles-v1-f1ebca6a8dcc1116c6d8.json  codemodel-v2-67bad3b4ac3676e4f2aa.json  index-2024-07-24T14-50-32-0023.json  target-dll-Debug-1601a1eec938ca1b12bf.json  target-staticlib-Debug-4e99af8b748228ae77ac.json  target-testdll-Debug-e1f6d3a0182c2a012b3d.json  toolchains-v1-43e75169d188cf5e13d3.json
testdll/src/: dll.cpp  dll.h  main.cpp  staticlib.cpp  staticlib.h  testsingle.cpp  testsingle.h
threadpool/: CMakeLists.txt
threadpool/include/: thread_pool.h
threadpool/src/: simple_thread_pool.cpp  thread_pool.cpp
uploadFile/: uploadFile.sln  uploadFile.vcxproj  uploadFile.vcxproj.filters
uploadFile/include/: uploadFile.h
uploadFile/src/: uploadFile.cpp
websocketCS/: CMakeLists.txt  jsonUtil.cpp  jsonUtil.h  main.cpp  webSocketClient.cpp  webSocketServer.cpp
zhcosign/: CMakeLists.txt
zhcosign/GCC-QT5.9/: .ninja_deps  .ninja_log  build-Debug.ninja  build-RelWithDebInfo.ninja  build-Release.ninja  build.ninja
zhcosign/GCC-QT5.9/.cmake/api/v1/reply/: cache-v2-7ecd99319f1a5c404bd4.json  cmakeFiles-v1-4d8de4a809e9c2a39213.json  codemodel-v2-b75295c97cf1e896ec1c.json  index-2024-10-17T07-56-51-0752.json  target-zhcosign-Debug-324db1dd803658c3d4ad.json  target-zhcosign-RelWithDebInfo-a8985d60cbd62a02df91.json  target-zhcosign-Release-bc01e75e9b07ce1d1a99.json
zhcosign/include/: replex.h
zhcosign/src/: EtZHCosignTest.cpp  etcryptmedia_module.cpp  etcryptmedia_module.h
景区信息管理系统/: 景区信息管理系统.sln
景区信息管理系统/景区信息管理系统/: Graph.h  Tourism.h  main.cpp  景区信息管理系统.vcxproj  景区信息管理系统.vcxproj.filters
职工管理系统/: 职工管理系统.sln
职工管理系统/职工管理系统/: function.h  职工管理系统.c  职工管理系统.vcxproj  职工管理系统.vcxproj.filters
霍夫曼解码测试/: 霍夫曼解码测试.sln
霍夫曼解码测试/霍夫曼解码测试/: Compress.cpp  Compress.h  Huffman.h  霍夫曼解码测试.cpp  霍夫曼解码测试.vcxproj  霍夫曼解码测试.vcxproj.filters
